Closed Bug 378339 Opened 17 years ago Closed 17 years ago

nsFrameIterator doesn't initialize mOffEdge

Categories

(Core :: Layout, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha4

People

(Reporter: sayrer, Unassigned)

References

Details

Attachments

(1 file)

according to valgrind:

==29591== Conditional jump or move depends on uninitialised value(s)
==29591==    at 0x16AC33F4: nsFrameIterator::CurrentItem(nsISupports**) (nsFrameTraversal.cpp:243)
==29591==    by 0x16DB0D49: nsEventStateManager::GetNextTabbableContent(nsIContent*, nsIContent*, nsIFrame*, int, int, nsIContent**, nsIFrame**) (nsEventStateManager.cpp:3568)
==29591==    by 0x16DB171E: nsEventStateManager::ShiftFocusInternal(int, nsIContent*) (nsEventStateManager.cpp:3318)
==29591==    by 0x16DB2302: nsEventStateManager::ShiftFocus(int, nsIContent*) (nsEventStateManager.cpp:3203)
==29591==    by 0x16F619AD: nsFocusController::MoveFocus(int, nsIDOMElement*) (nsFocusController.cpp:302)
==29591==    by 0x16F1C4F9: nsXULCommandDispatcher::AdvanceFocus() (nsXULCommandDispatcher.cpp:220)
==29591==    by 0x58EB1F3: NS_InvokeByIndex (xptcinvoke_x86_64_linux.cpp:208)
==29591==    by 0xD96A37E: XPCWrappedNative::CallMethod(XPCCallContext&, XPCWrappedNative::CallMode) (xpcwrappednative.cpp:2247)
==29591==    by 0xD978C3B: XPC_WN_CallMethod(JSContext*, JSObject*, unsigned, long*, long*) (xpcwrappednativejsops.cpp:1464)
==29591==    by 0x533E178: js_Invoke (jsinterp.c:1332)
==29591==    by 0x5350CF3: js_Interpret (jsinterp.c:4011)
==29591==    by 0x533E1F9: js_Invoke (jsinterp.c:1351)
Attachment #262389 - Flags: review?(uriber)
Attachment #262389 - Flags: review?(uriber) → review+
Attachment #262389 - Flags: superreview?(roc)
Attachment #262389 - Flags: superreview?(roc) → superreview+
Checking in nsFrameTraversal.cpp;
/cvsroot/mozilla/layout/base/nsFrameTraversal.cpp,v  <--  nsFrameTraversal.cpp
new revision: 3.56; previous revision: 3.55
done
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9alpha4
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: