bug 378339. nsFrameIterator doesn't initialize mOffEdge. r=uriber, sr=roc